# equalizer

./: Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yml  flakehub-publish-tagged.yml  nix.yml  release-bsd-aarch64.yml  release.yml
.tangled/workflows/: build.yml
proto/equalizer/v1/: equalizer.proto
src/: audio.rs  control.rs  equalizer.rs  main.rs  presets.rs  remote.rs  server.rs  settings.rs  ui.rs
src/api/: equalizer.v1.rs  mod.rs
